test/error/type/err5.rzy
// fail, use procedure to index array

interface
  Tick
    function tick();
  end
  
component
  Err5
    input
      in  : Tick;
    
    output
      out : Tick;
      
    implementation elementary
    
    var
      a : Array{10,R{0,10}};
    
    function in.tick()
      return a[out.tick()];
    end
    
  end

